openapi finished and other small changes, fixes
